src/objects/TR1__Expense_Report_Detail__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Expense_Report_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Billable_Amount__c</fullName>
        <description>W-008391 :- Captures Billable Amount</description>
        <label>Billable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Billable__c</fullName>
        <description>W-008391 :-Captures the value of Billable on Rate Object</description>
        <formula>TR1__Rate__r.TR1__Billable__c</formula>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Cell_Phones_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Cell Phones Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Expense_Report__c</fullName>
        <label>Expense Report</label>
        <referenceTo>TR1__Expense_Report__c</referenceTo>
        <relationshipName>Expense_Report_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__GP_Amount__c</fullName>
        <description>W-008391 :- 	This Fields Calculate Amount based on Prepaid, Billable and Non-billable checkboxes</description>
        <label>GP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Home_DSL_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Home DSL Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Lodging_Amnt__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Lodging Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Lodging_Amount__c</fullName>
        <formula>IF( $RecordType.DeveloperName = &apos;Lodging&apos;, TR1__Amount__c ,0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lodging Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Meals_Ent_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Meals &amp; Entertainment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Meals_Entertainment_Amount__c</fullName>
        <formula>IF( $RecordType.DeveloperName = &apos;Meals_Entertainment&apos;, TR1__Amount__c ,0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meals &amp; Entertainment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__MileageRate__c</fullName>
        <formula>TR1__Rate__r.TR1__TimeType__r.TR1__Mileage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mileage Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Mileage_Amnt__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Mileage Amnt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Mileage_Amount__c</fullName>
        <formula>TR1__Miles__c *  TR1__Mileage_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mileage Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Mileage_Rate__c</fullName>
        <label>Mileage Rate</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Miles__c</fullName>
        <label>Miles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Oth_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Other Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Other_Amount__c</fullName>
        <formula>IF( $RecordType.DeveloperName = &apos;Other&apos;, TR1__Amount__c ,0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Other_Transport_Amount__c</fullName>
        <formula>IF( $RecordType.DeveloperName = &apos;Transportation_Parking&apos;,  TR1__Amount__c ,0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Transportation &amp; Parking Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Other_Transport_Parking_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Other Transportation &amp; Parking Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Prepaid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>W-008391 :-Captures the expense has been pre paid</description>
        <label>Prepaid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>W-008391 :- Created for the Rate Lookup on Expense Line Item</description>
        <label>Rate</label>
        <referenceTo>TR1__Rate__c</referenceTo>
        <relationshipLabel>Expense Line Items</relationshipLabel>
        <relationshipName>Expense_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Reimbursible_Expense_Amount__c</fullName>
        <description>W-008391 :- Reimbursible_Expense_Amount__c</description>
        <label>Reimbursible Expense Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Amount__c</fullName>
        <formula>TR1__Amount__c +  TR1__Mileage_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Expenses__c</fullName>
        <label>Total Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Vendor__c</fullName>
        <label>Vendor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Expense Line Item</label>
    <nameField>
        <displayFormat>EXPD-{0000}</displayFormat>
        <label>Expense Report Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Line Items</pluralLabel>
    <recordTypes>
        <fullName>TR1__Client_Gift</fullName>
        <active>true</active>
        <description>Expenses related to gifts for clients.</description>
        <label>Client Gift</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Lodging</fullName>
        <active>true</active>
        <description>Expenses related to the cost of lodging.</description>
        <label>Lodging</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Meals_Entertainment</fullName>
        <active>true</active>
        <description>Expenses related to meals and entertainment.</description>
        <label>Meals &amp; Entertainment</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Mileage</fullName>
        <active>true</active>
        <description>Expense related to the cost of mileage.</description>
        <label>Mileage</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Other</fullName>
        <active>true</active>
        <description>Expenses not defined.  Please explain details of the expense in the Comments field.</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Per_Diem</fullName>
        <active>true</active>
        <label>Per Diem</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Transportation_Parking</fullName>
        <active>true</active>
        <description>Expenses related to the cost parking and transportation.</description>
        <label>Transportation &amp; Parking</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date_Validation</fullName>
        <active>true</active>
        <description>Date should be Greater then or Equal to Expense Report Start date and Less then or equal to Expense Report End Date</description>
        <errorConditionFormula>OR( 
(TR1__Date__c &lt; TR1__Expense_Report__r.TR1__Expense_Period_Start__c), 
(TR1__Date__c &gt; TR1__Expense_Report__r.TR1__Expense_Period_End__c))</errorConditionFormula>
        <errorMessage>Line Item Date should be between Expense Report Start and End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__ReadOnly_Validation</fullName>
        <active>true</active>
        <description>User could edit the record only if the Status filed value on Expense Report is Unsubmitted or Rejected – all other values would be no edit.</description>
        <errorConditionFormula>if( OR(
                ISPICKVAL(TR1__Expense_Report__r.TR1__Status__c,  &quot;Unsubmitted&quot;)  ,
                ISPICKVAL(TR1__Expense_Report__r.TR1__Status__c,  &quot;Rejected&quot;) 
           )
           ,false ,
           true
 )</errorConditionFormula>
        <errorMessage>User can only edit this record if the related Expense Report is Unsubmitted Or Rejected</errorMessage>
    </validationRules>
</CustomObject>